Added links to parts of documentation as necessary

--- a/stringOf.opam
+++ b/stringOf.opam
@@ -12,7 +12,7 @@ authors: "Nikunj Chawla <nikchawla312@gmail.com>"
 homepage: "https://github.com/nik312123/stringOf"
 dev-repo: "git+https://github.com/nik312123/stringOf.git"
 bug-reports: "https://github.com/nik312123/stringOf/issues"
-doc: ""
+doc: "https://nik312123.github.io/ocamlLibDocs/stringOf/StringOf/"
 depends: [
     "ocaml" {>= "4.08.1"}
     "dune" {>= "2.7.1"}
